<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/blury_background"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvappname"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="Estilizado"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcomme"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wellcome"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvappname" />

        <TextView
            android:id="@+id/tv_welcomme2"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/wellcome2"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcomme" />
        <androidx.appcompat.widget.AppCompatButton
            style="@style/blueButtonStyle"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:text="@string/registre_se"
            android:id="@+id/btn_register_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcomme2"
            app:layout_constraintStart_toStartOf="@+id/tv_welcomme2"
            app:layout_constraintTop_toBottomOf="@id/tv_welcomme2" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/whiteButtonStyle"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:id="@+id/btn_login_options"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcomme2"
            app:layout_constraintStart_toStartOf="@+id/tv_welcomme2"
            app:layout_constraintTop_toBottomOf="@+id/btn_register_options" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>