<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvappname"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="Estilizado"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcomme"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/fazerlogin"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/tvappname" />

        <TextView
            android:id="@+id/tv_welcomme2"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/n_o_tem_conta_registre_se_agora"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/tv_welcomme" />

        <EditText
            android:id="@+id/edt_email_login"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/tv_welcomme2" />

        <EditText
            android:id="@+id/edt_password_login"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:hint="Senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/edt_email_login" />

        <TextView
            android:id="@+id/tv_esqueceu_senha"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/esqueceu_a_senha"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/edt_password_login" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"

            android:layout_height="55dp"
            android:layout_margin="15dp"
            android:text="Login"
            app:spinning_bar_color="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/guidelineright"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/tv_esqueceu_senha" />

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/facebook_login"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineleft"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facebook"
            app:layout_constraintStart_toStartOf="@id/facebook_login"
            app:layout_constraintTop_toTopOf="@id/facebook_login"
            app:layout_constraintBottom_toBottomOf="@id/facebook_login"
            app:layout_constraintEnd_toEndOf="@id/facebook_login"/>
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/google_login"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google"
            app:layout_constraintStart_toStartOf="@id/google_login"
            app:layout_constraintTop_toTopOf="@id/google_login"
            app:layout_constraintBottom_toBottomOf="@id/google_login"
            app:layout_constraintEnd_toEndOf="@id/google_login"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>